--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ content {
  
 .content-middle-left {
     /*border: 1px solid lightblue;*/
-    width: 40%;
+    width: 45%;
     color: white;
     display: flex;
     flex-direction: column;
@@ -143,7 +143,7 @@ content {
     padding:  10px 20px;
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    /*transition: background-color 0.3s ease;*/
     max-width: 100px;
     
 }
@@ -156,8 +156,8 @@ content {
 .content-middle-right {
     /*border: 1px solid lightblue;*/
     padding-top: 16px;
-    padding-left: 60px;
-    width: 40%;
+    /*padding-left: 60px;*/
+    width: 45%;
 }
 
 .content-middle-right-image-placeholder {
@@ -187,8 +187,8 @@ content {
 .content-bottom-left {
     /*border: 1px solid lightblue;*/
     padding-top: 16px;
-    padding-right: 60px;
-    width: 40%;
+    padding-right: 30px;
+    width: 45%;
 }
 
 .content-bottom-left-map-placeholder {
@@ -205,8 +205,8 @@ content {
 
 .content-bottom-right {
     /*border: 1px solid lightblue;*/
-    width: 40%;
-    padding-left: 50px;
+    width: 45%;
+    padding-left: 25px;
 }
 
 .content-bottom-right h1 {
