--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ content {
 
 .content-middle-left h1 {
     font-size: 3rem;
+    letter-spacing: 0.1rem;
     margin-bottom: 30px;
 }
 
@@ -166,8 +167,8 @@ content {
     align-items: center;
     text-align: center;
     font-size: 1rem;
-    width: 550px;
-    height: 380px;
+    width: 500px;
+    height: 350px;
     background-color: rgb(71, 71, 71);
 }
 
@@ -179,8 +180,8 @@ content {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: rgb(71, 71, 71);
 }
 
@@ -197,8 +198,8 @@ content {
     align-items: center;
     text-align: center;
     font-size: 1rem;
-    width: 550px;
-    height: 380px;
+    width: 500px;
+    height: 350px;
     background-color: rgb(0, 0, 0);
     color: rgb(71, 71, 71);
 }
